fix: Menu top offset invisibles submenu when hover in between spacing from menu-item to submenu

--- a/assets/css/unminified/frontend.css
+++ b/assets/css/unminified/frontend.css
@@ -3808,6 +3808,15 @@ body.admin-bar.ast-primary-sticky-header-active .ast-mobile-popup-drawer .ast-mo
   width: 150px;
 }
 
+.ast-desktop .main-header-menu .menu-item > .sub-menu:before {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  width: 100%;
+  transform: translateY(-100%);
+}
+
 /*----------  Forms  ----------*/
 /**
  * 	Form Fields
