--- a/sass/site/header/_header-builder-main.scss
+++ b/sass/site/header/_header-builder-main.scss
@@ -353,3 +353,15 @@
 		}
 	}
 }
+.ast-desktop {
+    .main-header-menu {
+        .menu-item > .sub-menu:before {
+			position: absolute;
+			content: '';
+			top: 0;
+			left: 0;
+			width: 100%;
+			transform: translateY(-100%);
+		}
+	}
+}
